ajouter le header avec photo

--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./dist/styles.css" rel="stylesheet">
-
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kanban Board</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1 class="text-3xl font-bold underline">
-        Hello world!
-      </h1>
+<body class="bg-gray-100">
+
+<!-- Barre supérieure -->
+<header class="bg-gray-300 p-4">
+  <div class="container mx-auto flex items-center">
+    <!-- Image à gauche -->
+    <img src="c:/Users/adm/Desktop/1023-1728555121.jpg" alt="image" class="w-12 h-12 rounded-full mr-4">
+    <!-- Titre aligné à gauche -->
+    <h1 class="text-2xl font-bold">NADA ZIRARI</h1>
+    <!-- Sous-titre centré avec flex-grow -->
+    <p class="text-center text-gray-700 flex-grow text-lg ml-4">TO-DO LIST<br> TODAY MAIN FOCUS</p>
+  </div>
+</header>
+
     
 </body>
 </html>
