j'ai ajouté la zone de task doing

--- a/index.html
+++ b/index.html
@@ -40,5 +40,15 @@
           </div>
           <button onclick="addTask('todo')" class="mt-4 w-full py-2 bg-blue-500 text-white rounded">Ajouter une tâche</button>
         </div>
+
+         <!-- In Progress Column -->
+    <div class="bg-white p-4 rounded-lg shadow-md">
+        <h2 class="text-xl font-semibold mb-4">In Progress</h2>
+        <div id="inProgressList" class="space-y-2">
+          <!-- Tasks will appear here -->
+        </div>
+        <button onclick="addTask('inProgress')" class="mt-4 w-full py-2 bg-blue-500 text-white rounded">Ajouter une tâche</button>
+      </div>
+      
 </body>
 </html>
