j'ai ajouté la zone de task DONE

--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
         </div>
         <button onclick="addTask('inProgress')" class="mt-4 w-full py-2 bg-blue-500 text-white rounded">Ajouter une tâche</button>
       </div>
-      
+
+
+       <!-- Done Column -->
+    <div class="bg-white p-4 rounded-lg shadow-md">
+        <h2 class="text-xl font-semibold mb-4">Done</h2>
+        <div id="doneList" class="space-y-2">
+          <!-- Tasks will appear here -->
+        </div>
+        <button onclick="addTask('done')" class="mt-4 w-full py-2 bg-blue-500 text-white rounded">Ajouter une tâche</button>
+      </div>
+    </div>
+  </div>
+  
+  <script src="script.js"></script>
 </body>
 </html>
