--- a/index.html
+++ b/index.html
@@ -1,76 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kanban Board</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="relative bg-gray-400">
 
-<!-- Main Content -->
-<div class="relative z-10">
-  <!-- Header -->
-  <header class="bg-gray-600 p-4">
-    <div class="container mx-auto flex items-center">
-      <img src="C:\Users\adm\Desktop\done_outline_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" alt="Profile Image" class="w-12 h-12 rounded-full mr-4">
-      <h1 class="text-2xl font-bold text-black text-">TASK FLOW</h1>
-      <p class="text-center text-2xl text-black flex-grow text-lg m font-bold"> TODAY MAIN FOCUS</p>
-      
+<!-- Header -->
+<header class="bg-gray-600 p-4">
+  <div class="container mx-auto flex items-center">
+    <img src="dist/done_outline_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" alt="Profile Image" class="w-12 h-12 rounded-full mr-4">
+    <h1 class="text-2xl font-bold text-black">TASK FLOW</h1>
+    <p class="text-center text-2xl text-black flex-grow font-bold">TODAY MAIN FOCUS</p>
+  </div>
+</header>
 
-    </div>
-  </header>
+<!-- Main Content Section -->
+<div class="container mx-auto p-5">
+  <div class="flex justify-center space-x-4 mt-4">
+    <button onclick="ouvrirModal()" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-200">
+      Ajouter une Tâche
+    </button>
+    
+  </div>
 
-  <!-- Main Content Section -->
-  <div class="container mx-auto p-5">
-    <div class="flex flex-col justify-center items-center py-5">
-      <h1 class="text-3xl font-bold text-center mb-8">Voici les taches</h1>
-      <button onclick="addTask('todo')"  class=" rounded-3xl mt-4 w-fit text-center py-2 px-5 bg-gray-800 text-white rounded">Ajouter une tâche</button>
-      <button onclick="addTask('todo')" 
-      class=" rounded-3xl mt-4 w-fit text-center py-2 px-5 bg-gray-800 text-white rounded">Ajouter Multipl tâche</button>
-    </div>
-
-    <!-- Task Details -->
-    <div id="taskDetails" class="bg-blue-100 p-4 rounded mb-5 hidden">
-      <div class="flex justify-between items-center">
-        <h2 class="text-lg font-semibold">Détails de la tâche:</h2>
+  <!-- Kanban Columns -->
+  <div class="container mx-auto p-5 flex flex-col md:flex-row gap-4">
+    <div class="bg-white p-4 rounded-lg shadow-md flex-1">
+      <div class="flex justify-between items-center mb-4">
+        <h2 class="text-xl font-bold">To Do</h2>
+        <p id="todoCount" class="text-xl font-bold text-gray-500">0</p>
       </div>
-      <p id="taskDetailText"></p>
+      <div id="todoList" class="space-y-2"></div>
     </div>
+    <div class="bg-white p-4 rounded-lg shadow-md flex-1">
+      <div class="flex justify-between items-center mb-4">
+        <h2 class="text-xl font-bold">In Progress</h2>
+        <p id="inProgressCount" class="text-xl font-bold text-gray-500">0</p>
+      </div>
+      <div id="inProgressList" class="space-y-2"></div>
+    </div>
+    <div class="bg-white p-4 rounded-lg shadow-md flex-1">
+      <div class="flex justify-between items-center mb-4">
+        <h2 class="text-xl font-bold">Done</h2>
+        <p id="doneCount" class="text-xl font-bold text-gray-500">0</p>
+      </div>
+      <div id="doneList" class="space-y-2"></div>
+    </div>
+  </div>
+</div>
 
-    <div class="container mx-auto p-5 flex flex-col md:flex-row gap-4">
-      <!-- To Do Column -->
-      <div class="bg-white p-4 rounded-lg shadow-md flex-1">
-        <div class="flex justify-between items-center mb-4">
-          <h2 class="text-xl font-bold">To Do</h2>
-          <p id="todoCount" class="text-sm text-gray-500 font-bold text-xl" text-> 0</p>
+<!-- Modal -->
+<div id="modal" class="fixed inset-0 flex items-center justify-center bg-gray-900 bg-opacity-50 hidden">
+
+ <div class="bg-white p-6 rounded-lg shadow-lg w-11/12 md:w-1/2 lg:w-1/3 relative"> 
+   
+   <span onclick="fermerModal()" class="absolute top-4 right-4 text-gray-500 cursor-pointer">&times;</span>
+   <h2 class="text-2xl font-semibold text-center mb-4">Ajouter une Tâche</h2> 
+    <form id="taskForm" class="space-y-4">
+      <div>
+        <label class="block font-medium text-gray-700">Titre de la tâche</label>
+        <input type="text" id="title" name="title" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+      </div>
+      <div>
+        <label class="block font-medium text-gray-700">Description</label>
+        <textarea id="description" name="description" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required></textarea>
+      </div>
+      <div>
+        <label class="block font-medium text-gray-700">Date</label>
+        <input type="date" id="date" name="date" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+      </div>
+      <div>
+        <p class="font-medium text-gray-700">Statut</p>
+        <div class="flex items-center space-x-4">
+          <label class="inline-flex items-center">
+            <input type="radio" id="todo" name="status" value="todo" class="form-radio text-blue-500" required>
+            <span class="ml-2">À faire</span>
+          </label>
+          <label class="inline-flex items-center">
+            <input type="radio" id="doing" name="status" value="doing" class="form-radio text-blue-500" required>
+            <span class="ml-2">En cours</span>
+          </label>
+          <label class="inline-flex items-center">
+            <input type="radio" id="done" name="status" value="done" class="form-radio text-blue-500" required>
+            <span class="ml-2">Terminé</span>
+          </label>
         </div>
-        <div id="todoList" class="space-y-2"></div>
       </div>
-    <!-- In Progress Column -->
-  <div class="bg-white p-4 rounded-lg shadow-md flex-1">
-    <div class="flex justify-between items-center mb-4">
-      <h2 class="text-xl font-bold ">In Progress</h2>
-      <p id="inProgressCount" class="text-sm text-gray-500 font-bold text-xl"> 0</p>
-    </div>
-    <div id="inProgressList" class="space-y-2"></div>
-  </div>
-
-  <!-- Done Column -->
-  <div class="bg-white p-4 rounded-lg shadow-md flex-1">
-    <div class="flex justify-between items-center mb-4">
-      <h2 class="text-xl font-bold">Done</h2>
-      <p id="doneCount" class="text-sm text-gray-500 font-bold text-xl"> 0</p>
-    </div>
-    <div id="doneList" class="space-y-2"></div>
-  </div>
-</div>
+      <button type="submit" class="w-full py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600 transition duration-200">
+        Enregistrer
+      </button>
+    </form>
   </div>
 </div>
 
-
-
-<script src="script.js"></script>
+<script src="./src/script.js"></script>
 </body>
 </html>
