jai modifier la fonction en js pour ajouter une tache

--- a/index.html
+++ b/index.html
@@ -8,27 +8,30 @@
   <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="relative bg-gray-400">
+<body class="bg-gray-200">
+  
 
 <!-- Header -->
 <header class="bg-gray-600 p-4">
   <div class="container mx-auto flex items-center">
     <img src="dist/done_outline_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" alt="Profile Image" class="w-12 h-12 rounded-full mr-4">
     <h1 class="text-2xl font-bold text-black">TASK FLOW</h1>
-    <p class="text-center text-2xl text-black flex-grow font-bold">TODAY MAIN FOCUS</p>
+    <p class="text-center text-2xl text-black flex-grow font-bold">Bienvenue Sur Votre Kanban</p>
   </div>
 </header>
 
 <!-- Main Content Section -->
 <div class="container mx-auto p-5">
   <div class="flex justify-center space-x-4 mt-4">
-    <button onclick="ouvrirModal()" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-200">
+    <button onclick="ouvrirModal()" class="bg-gray-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-200">
       Ajouter une Tâche
     </button>
     
   </div>
 
-  <!-- Kanban Columns -->
+
+
+  <!-- Kanban Columns pour le formulaire -->
   <div class="container mx-auto p-5 flex flex-col md:flex-row gap-4">
     <div class="bg-white p-4 rounded-lg shadow-md flex-1">
       <div class="flex justify-between items-center mb-4">
@@ -54,14 +57,13 @@
   </div>
 </div>
 
+
 <!-- Modal -->
 <div id="modal" class="fixed inset-0 flex items-center justify-center bg-gray-900 bg-opacity-50 hidden">
-
- <div class="bg-white p-6 rounded-lg shadow-lg w-11/12 md:w-1/2 lg:w-1/3 relative"> 
-   
-   <span onclick="fermerModal()" class="absolute top-4 right-4 text-gray-500 cursor-pointer">&times;</span>
-   <h2 class="text-2xl font-semibold text-center mb-4">Ajouter une Tâche</h2> 
-    <form id="taskForm" class="space-y-4">
+  <div class="bg-white p-6 rounded-lg shadow-lg w-11/12 md:w-1/2 lg:w-1/3 relative"> 
+    <span onclick="fermerModal()" class="absolute top-4 right-4 text-gray-500 cursor-pointer">&times;</span>
+    <h2 class="text-2xl font-semibold text-center mb-4">Ajouter une Tâche</h2> 
+    <form id="taskForm" class="space-y-4" onsubmit="ajouterTache(event)">
       <div>
         <label class="block font-medium text-gray-700">Titre de la tâche</label>
         <input type="text" id="title" name="title" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required>
@@ -82,12 +84,29 @@
             <span class="ml-2">À faire</span>
           </label>
           <label class="inline-flex items-center">
-            <input type="radio" id="doing" name="status" value="doing" class="form-radio text-blue-500" required>
+            <input type="radio" id="doing" name="status" value="inProgress" class="form-radio text-blue-500" required>
             <span class="ml-2">En cours</span>
           </label>
           <label class="inline-flex items-center">
             <input type="radio" id="done" name="status" value="done" class="form-radio text-blue-500" required>
             <span class="ml-2">Terminé</span>
+          </label>
+        </div>
+      </div>
+      <div>
+        <p class="font-medium text-gray-700">Priorité</p>
+        <div class="flex items-center space-x-4">
+          <label class="inline-flex items-center">
+            <input type="radio" id="P1" name="priority" value="P1" class="form-radio text-red-500" required>
+            <span class="ml-2">P1</span>
+          </label>
+          <label class="inline-flex items-center">
+            <input type="radio" id="P2" name="priority" value="P2" class="form-radio text-yellow-500" required>
+            <span class="ml-2">P2</span>
+          </label>
+          <label class="inline-flex items-center">
+            <input type="radio" id="P3" name="priority" value="P3" class="form-radio text-green-500" required>
+            <span class="ml-2">P3</span>
           </label>
         </div>
       </div>
@@ -97,6 +116,7 @@
     </form>
   </div>
 </div>
+
 
 <script src="./src/script.js"></script>
 </body>
