--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-200">
   
 
-<!-- Header -->
+<!-- header -->
 <header class="bg-gray-600 p-4">
   <div class="container mx-auto flex items-center">
     <img src="dist/done_outline_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" alt="Profile Image" class="w-12 h-12 rounded-full mr-4">
@@ -20,7 +20,7 @@
   </div>
 </header>
 
-<!-- Main Content Section -->
+<!-- Main conteneure -->
 <div class="container mx-auto p-5">
   <div class="flex justify-center space-x-4 mt-4">
     <button onclick="ouvrirModal()" class="bg-gray-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-200">
@@ -31,7 +31,7 @@
 
 
 
-  <!-- Kanban Columns pour le formulaire -->
+  <!-- les section du  todolist -->
   <div class="container mx-auto p-5 flex flex-col md:flex-row gap-4">
     <div class="bg-white p-4 rounded-lg shadow-md flex-1">
       <div class="flex justify-between items-center mb-4">
@@ -40,7 +40,7 @@
       </div>
       <div id="todoList" class="space-y-2"></div>
     </div>
-    <div class="bg-white p-4 rounded-lg shadow-md flex-1">
+    <div class="bg-white p-4 rounded-md shadow-md flex-1">
       <div class="flex justify-between items-center mb-4">
         <h2 class="text-xl font-bold">In Progress</h2>
         <p id="inProgressCount" class="text-xl font-bold text-gray-500">0</p>
@@ -60,7 +60,7 @@
 
 <!-- Modal -->
 <div id="modal" class="fixed inset-0 flex items-center justify-center bg-gray-900 bg-opacity-50 hidden">
-  <div class="bg-white p-6 rounded-lg shadow-lg w-11/12 md:w-1/2 lg:w-1/3 relative"> 
+  <div class="bg-gray-300 p-6 rounded-lg shadow-lg w-11/12 md:w-1/2 lg:w-1/3 relative"> 
     <span onclick="fermerModal()" class="absolute top-4 right-4 text-gray-500 cursor-pointer">&times;</span>
     <h2 class="text-2xl font-semibold text-center mb-4">Ajouter une Tâche</h2> 
     <form id="taskForm" class="space-y-4" onsubmit="ajouterTache(event)">
@@ -110,7 +110,7 @@
           </label>
         </div>
       </div>
-      <button type="submit" class="w-full py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600 transition duration-200">
+      <button type="submit" class="w-full py-2 bg-gray-700 text-white rounded-lg hover:bg-green-600 transition duration-200">
         Enregistrer
       </button>
     </form>
