--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-gray-200">
+<body class="bg-200 min-h-screen">
   
 
 <!-- header -->
-<header class="bg-gray-600 p-4">
+<header class="bg-gray-800 p-4">
   <div class="container mx-auto flex items-center">
     <img src="dist/done_outline_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" alt="Profile Image" class="w-12 h-12 rounded-full mr-4">
-    <h1 class="text-2xl font-bold text-black">TASK FLOW</h1>
-    <p class="text-center text-2xl text-black flex-grow font-bold">Bienvenue Sur Votre Kanban</p>
+    <h1 class="text-2xl font-bold text-white">TASK FLOW</h1>
+    <p class="text-center text-2xl text-white flex-grow font-bold">Bienvenue Sur Votre Kanban</p>
   </div>
 </header>
-
-<!-- Main conteneure -->
+<!-- avec arrière-plan -->
+<div class="w-full relative bg-no-repeat bg-cover h-screen z-0  overflow-hidden" style="background-image: url('dist/case-cocher-coche-verte-isolee_172436-1035.jpg');">
+  <!-- Main conteneure -->
 <div class="container mx-auto p-5">
   <div class="flex justify-center space-x-4 mt-4">
-    <button onclick="ouvrirModal()" class="bg-gray-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-200">
+    <button onclick="ouvrirModal()" class="bg-black hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-200">
       Ajouter une Tâche
     </button>
     
@@ -59,8 +60,8 @@
 
 
 <!-- Modal -->
-<div id="modal" class="fixed inset-0 flex items-center justify-center bg-gray-900 bg-opacity-50 hidden">
-  <div class="bg-gray-300 p-6 rounded-lg shadow-lg w-11/12 md:w-1/2 lg:w-1/3 relative"> 
+<div id="modal" class="fixed inset-0 flex items-center justify-center bg-blue-200 bg-opacity-50 hidden">
+  <div class="bg-blue-200 p-6 rounded-lg shadow-lg w-11/12 md:w-1/2 lg:w-1/3 relative"> 
     <span onclick="fermerModal()" class="absolute top-4 right-4 text-gray-500 cursor-pointer">&times;</span>
     <h2 class="text-2xl font-semibold text-center mb-4">Ajouter une Tâche</h2> 
     <form id="taskForm" class="space-y-4" onsubmit="ajouterTache(event)">
