--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <p class="text-center text-2xl text-white flex-grow font-bold">Bienvenue Sur Votre Kanban</p>
   </div>
 </header>
-<!-- avec arrière-plan -->
+<!-- backgrouund -->
 <div class="w-full relative bg-no-repeat bg-cover h-screen z-0  overflow-hidden" style="background-image: url('dist/case-cocher-coche-verte-isolee_172436-1035.jpg');">
-  <!-- Main conteneure -->
+  <!-- principal conteneure -->
 <div class="container mx-auto p-5">
   <div class="flex justify-center space-x-4 mt-4">
     <button onclick="ouvrirModal()" class="bg-black hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-200">
