--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-200 min-h-screen">
+<body class="bg-200 min-h-screen flex flex-col">
   
-
 <!-- header -->
 <header class="bg-gray-800 p-4">
   <div class="container mx-auto flex items-center">
@@ -19,105 +18,116 @@
     <p class="text-center text-2xl text-white flex-grow font-bold">Bienvenue Sur Votre Kanban</p>
   </div>
 </header>
-<!-- backgrouund -->
-<div class="w-full relative bg-no-repeat bg-cover h-screen z-0  overflow-hidden" style="background-image: url('dist/case-cocher-coche-verte-isolee_172436-1035.jpg');">
-  <!-- principal conteneure -->
-<div class="container mx-auto p-5">
-  <div class="flex justify-center space-x-4 mt-4">
-    <button onclick="ouvrirModal()" class="bg-black hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-200">
-      Ajouter une Tâche
-    </button>
-    
-  </div>
 
-
-
-  <!-- les section du  todolist -->
-  <div class="container mx-auto p-5 flex flex-col md:flex-row gap-4">
-    <div class="bg-white p-4 rounded-lg shadow-md flex-1">
-      <div class="flex justify-between items-center mb-4">
-        <h2 class="text-xl font-bold">To Do</h2>
-        <p id="todoCount" class="text-xl font-bold text-gray-500">0</p>
-      </div>
-      <div id="todoList" class="space-y-2"></div>
-    </div>
-    <div class="bg-white p-4 rounded-md shadow-md flex-1">
-      <div class="flex justify-between items-center mb-4">
-        <h2 class="text-xl font-bold">In Progress</h2>
-        <p id="inProgressCount" class="text-xl font-bold text-gray-500">0</p>
-      </div>
-      <div id="inProgressList" class="space-y-2"></div>
-    </div>
-    <div class="bg-white p-4 rounded-lg shadow-md flex-1">
-      <div class="flex justify-between items-center mb-4">
-        <h2 class="text-xl font-bold">Done</h2>
-        <p id="doneCount" class="text-xl font-bold text-gray-500">0</p>
-      </div>
-      <div id="doneList" class="space-y-2"></div>
-    </div>
-  </div>
-</div>
-
-
-<!-- Modal -->
-<div id="modal" class="fixed inset-0 flex items-center justify-center bg-blue-200 bg-opacity-50 hidden">
-  <div class="bg-blue-200 p-6 rounded-lg shadow-lg w-11/12 md:w-1/2 lg:w-1/3 relative"> 
-    <span onclick="fermerModal()" class="absolute top-4 right-4 text-gray-500 cursor-pointer">&times;</span>
-    <h2 class="text-2xl font-semibold text-center mb-4">Ajouter une Tâche</h2> 
-    <form id="taskForm" class="space-y-4" onsubmit="ajouterTache(event)">
-      <div>
-        <label class="block font-medium text-gray-700">Titre de la tâche</label>
-        <input type="text" id="title" name="title" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required>
-      </div>
-      <div>
-        <label class="block font-medium text-gray-700">Description</label>
-        <textarea id="description" name="description" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required></textarea>
-      </div>
-      <div>
-        <label class="block font-medium text-gray-700">Date</label>
-        <input type="date" id="date" name="date" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required>
-      </div>
-      <div>
-        <p class="font-medium text-gray-700">Statut</p>
-        <div class="flex items-center space-x-4">
-          <label class="inline-flex items-center">
-            <input type="radio" id="todo" name="status" value="todo" class="form-radio text-blue-500" required>
-            <span class="ml-2">À faire</span>
-          </label>
-          <label class="inline-flex items-center">
-            <input type="radio" id="doing" name="status" value="inProgress" class="form-radio text-blue-500" required>
-            <span class="ml-2">En cours</span>
-          </label>
-          <label class="inline-flex items-center">
-            <input type="radio" id="done" name="status" value="done" class="form-radio text-blue-500" required>
-            <span class="ml-2">Terminé</span>
-          </label>
-        </div>
-      </div>
-      <div>
-        <p class="font-medium text-gray-700">Priorité</p>
-        <div class="flex items-center space-x-4">
-          <label class="inline-flex items-center">
-            <input type="radio" id="P1" name="priority" value="P1" class="form-radio text-red-500" required>
-            <span class="ml-2">P1</span>
-          </label>
-          <label class="inline-flex items-center">
-            <input type="radio" id="P2" name="priority" value="P2" class="form-radio text-yellow-500" required>
-            <span class="ml-2">P2</span>
-          </label>
-          <label class="inline-flex items-center">
-            <input type="radio" id="P3" name="priority" value="P3" class="form-radio text-green-500" required>
-            <span class="ml-2">P3</span>
-          </label>
-        </div>
-      </div>
-      <button type="submit" class="w-full py-2 bg-gray-700 text-white rounded-lg hover:bg-green-600 transition duration-200">
-        Enregistrer
+<!-- background -->
+<div class="w-full relative bg-no-repeat bg-cover flex-grow h-screen z-0 overflow-hidden" style="background-image: url('dist/case-cocher-coche-verte-isolee_172436-1035.jpg');">
+  <!-- principal conteneur -->
+  <div class="container mx-auto p-5">
+    <div class="flex justify-center space-x-4 mt-4">
+      <button onclick="ouvrirModal()" class="bg-black hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-200">
+        Ajouter une Tâche
       </button>
-    </form>
+    </div>
+
+    <!-- les sections du todo list -->
+    <div class="container mx-auto p-5 flex flex-col md:flex-row gap-4">
+      <div class="bg-white p-4 rounded-lg shadow-md flex-1">
+        <div class="flex justify-between items-center mb-4">
+          <h2 class="text-xl font-bold">To Do</h2>
+          <p id="todoCount" class="text-xl font-bold text-gray-500">0</p>
+        </div>
+        <div id="todoList" class="space-y-2"></div>
+      </div>
+
+      <div class="bg-white p-4 rounded-md shadow-md flex-1">
+        <div class="flex justify-between items-center mb-4">
+          <h2 class="text-xl font-bold">In Progress</h2>
+          <p id="inProgressCount" class="text-xl font-bold text-gray-500">0</p>
+        </div>
+        <div id="inProgressList" class="space-y-2"></div>
+      </div>
+      <div class="bg-white p-4 rounded-lg shadow-md flex-1">
+        <div class="flex justify-between items-center mb-4">
+          <h2 class="text-xl font-bold">Done</h2>
+          <p id="doneCount" class="text-xl font-bold text-gray-500">0</p>
+        </div>
+        <div id="doneList" class="space-y-2"></div>
+      </div>
+    </div>
   </div>
+
+  <!-- Modal -->
+  <div id="modal" class="fixed inset-0 flex items-center justify-center bg-blue-200 bg-opacity-50 hidden">
+    <div class="bg-blue-200 p-6 rounded-lg shadow-lg w-11/12 md:w-1/2 lg:w-1/3 relative"> 
+      <span onclick="fermerModal()" class="absolute top-4 right-4 text-gray-500 cursor-pointer">&times;</span>
+      <h2 class="text-2xl font-semibold text-center mb-4">Ajouter une Tâche</h2> 
+      <form id="taskForm" class="space-y-4" onsubmit="ajouterTache(event)">
+        <div>
+          <label class="block font-medium text-gray-700">Titre de la tâche</label>
+          <input type="text" id="title" name="title" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+        </div>
+        <div>
+          <label class="block font-medium text-gray-700">Description</label>
+          <textarea id="description" name="description" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required></textarea>
+        </div>
+        <div>
+          <label class="block font-medium text-gray-700">Date</label>
+          <input type="date" id="date" name="date" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+        </div>
+        <div>
+          <p class="font-medium text-gray-700">Statut</p>
+          <div class="flex items-center space-x-4">
+            <label class="inline-flex items-center">
+              <input type="radio" id="todo" name="status" value="todo" class="form-radio text-blue-500" required>
+              <span class="ml-2">À faire</span>
+            </label>
+            <label class="inline-flex items-center">
+              <input type="radio" id="doing" name="status" value="inProgress" class="form-radio text-blue-500" required>
+              <span class="ml-2">En cours</span>
+            </label>
+            <label class="inline-flex items-center">
+              <input type="radio" id="done" name="status" value="done" class="form-radio text-blue-500" required>
+              <span class="ml-2">Terminé</span>
+            </label>
+          </div>
+        </div>
+        <div>
+          <p class="font-medium text-gray-700">Priorité</p>
+          <div class="flex items-center space-x-4">
+            <label class="inline-flex items-center">
+              <input type="radio" id="P1" name="priority" value="P1" class="form-radio text-red-500" required>
+              <span class="ml-2">P1</span>
+            </label>
+            <label class="inline-flex items-center">
+              <input type="radio" id="P2" name="priority" value="P2" class="form-radio text-yellow-500" required>
+              <span class="ml-2">P2</span>
+            </label>
+            <label class="inline-flex items-center">
+              <input type="radio" id="P3" name="priority" value="P3" class="form-radio text-green-500" required>
+              <span class="ml-2">P3</span>
+            </label>
+          </div>
+        </div>
+        <button type="submit" class="w-full py-2 bg-gray-700 text-white rounded-lg hover:bg-green-600 transition duration-200">
+          Enregistrer
+        </button>
+      </form>
+    </div>
+  </div>
+
 </div>
 
+<footer class="bg-gray-800 text-white py-4 w-full">
+  <div class="container mx-auto text-center">
+    <p class="text-sm">&copy; 2024 Task Flow. Tous droits réservés.</p>
+  
+    <div class="flex justify-center space-x-4 mt-2">
+      <a href="#" class="hover:text-gray-400">Politique de confidentialité</a>
+      <a href="#" class="hover:text-gray-400">Conditions d'utilisation</a>
+     
+    </div>
+  </div>
+</footer>
 
 <script src="./src/script.js"></script>
 </body>
