--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-200 min-h-screen flex flex-col">
-  
+
 <!-- header -->
 <header class="bg-gray-800 p-4">
   <div class="container mx-auto flex items-center">
@@ -30,13 +30,14 @@
     </div>
 
     <!-- les sections du todo list -->
-    <div class="container mx-auto p-5 flex flex-col md:flex-row gap-4">
+    <!-- Utilisation des classes responsive -->
+    <div class="container mx-auto p-5 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-4">
       <div class="bg-white p-4 rounded-lg shadow-md flex-1">
         <div class="flex justify-between items-center mb-4">
           <h2 class="text-xl font-bold">To Do</h2>
           <p id="todoCount" class="text-xl font-bold text-gray-500">0</p>
         </div>
-        <div id="todoList" class="space-y-2"></div>
+        <div id="todoList" class="space-y-2 overflow-y-auto max-h-96"></div>
       </div>
 
       <div class="bg-white p-4 rounded-md shadow-md flex-1">
@@ -44,14 +45,15 @@
           <h2 class="text-xl font-bold">In Progress</h2>
           <p id="inProgressCount" class="text-xl font-bold text-gray-500">0</p>
         </div>
-        <div id="inProgressList" class="space-y-2"></div>
+        <div id="inProgressList" class="space-y-2 overflow-y-auto max-h-96"></div>
       </div>
+
       <div class="bg-white p-4 rounded-lg shadow-md flex-1">
         <div class="flex justify-between items-center mb-4">
           <h2 class="text-xl font-bold">Done</h2>
           <p id="doneCount" class="text-xl font-bold text-gray-500">0</p>
         </div>
-        <div id="doneList" class="space-y-2"></div>
+        <div id="doneList" class="space-y-2 overflow-y-auto max-h-96"></div>
       </div>
     </div>
   </div>
@@ -120,12 +122,6 @@
 <footer class="bg-gray-800 text-white py-4 w-full">
   <div class="container mx-auto text-center">
     <p class="text-sm">&copy; 2024 Task Flow. Tous droits réservés.</p>
-  
-    <div class="flex justify-center space-x-4 mt-2">
-      <a href="#" class="hover:text-gray-400">Politique de confidentialité</a>
-      <a href="#" class="hover:text-gray-400">Conditions d'utilisation</a>
-     
-    </div>
   </div>
 </footer>
 
