--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-200 min-h-screen flex flex-col">
-
+  
 <!-- header -->
 <header class="bg-gray-800 p-4">
   <div class="container mx-auto flex items-center">
@@ -30,30 +30,29 @@
     </div>
 
     <!-- les sections du todo list -->
-    <!-- Utilisation des classes responsive -->
-    <div class="container mx-auto p-5 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-4">
-      <div class="bg-white p-4 rounded-lg shadow-md flex-1">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-4">
+      <div class="bg-white p-4 rounded-lg shadow-md flex-1 overflow-y-auto">
         <div class="flex justify-between items-center mb-4">
           <h2 class="text-xl font-bold">To Do</h2>
           <p id="todoCount" class="text-xl font-bold text-gray-500">0</p>
         </div>
-        <div id="todoList" class="space-y-2 overflow-y-auto max-h-96"></div>
+        <div id="todoList" class="space-y-2 "></div>
       </div>
 
-      <div class="bg-white p-4 rounded-md shadow-md flex-1">
+      <div class="bg-white p-4 rounded-md shadow-md flex-1 overflow-y-auto">
         <div class="flex justify-between items-center mb-4">
           <h2 class="text-xl font-bold">In Progress</h2>
           <p id="inProgressCount" class="text-xl font-bold text-gray-500">0</p>
         </div>
-        <div id="inProgressList" class="space-y-2 overflow-y-auto max-h-96"></div>
+        <div id="inProgressList" class="space-y-2 "></div>
       </div>
-
-      <div class="bg-white p-4 rounded-lg shadow-md flex-1">
+      
+      <div class="bg-white p-4 rounded-lg shadow-md flex-1 overflow-y-auto">
         <div class="flex justify-between items-center mb-4">
           <h2 class="text-xl font-bold">Done</h2>
           <p id="doneCount" class="text-xl font-bold text-gray-500">0</p>
         </div>
-        <div id="doneList" class="space-y-2 overflow-y-auto max-h-96"></div>
+        <div id="doneList" class="space-y-2 "></div>
       </div>
     </div>
   </div>
